--- a/intro.html
+++ b/intro.html
@@ -81,7 +81,8 @@
     </p>
 
     <p>
-      You can copy/paste your workshop description, goals, or overview here.
+      You can now begin adding content to this page — an overview of the workshop,
+      goals, outline, or whatever you want participants to see first.
     </p>
   </div>
 
