--- a/intro.html
+++ b/intro.html
@@ -212,5 +212,32 @@
             </p>
 
             <p>
-              Her research spans from detecting recent population bottlenecks to uncovering
-              ancient admixture events, with the ultimate goal of understanding how
+              The Armstrong Lab focuses on a variety of topics spanning from the detection of recent population 
+              bottlenecks to uncovering ancient admixture events, with the ultimate goal of understanding how
+              evolutionary processes influence the resilience, adaptation, and long-term
+              viability of species. 
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Navigation Panel -->
+      <section class="panel">
+        <h2>Navigation</h2>
+        <p>
+          Use the tabs at the top of this page to move between the
+          <strong>Intro</strong>, <strong>Workshop</strong> steps,
+          <strong>Terminology</strong> reference, <strong>Programs</strong>
+          overview, and additional <strong>Links</strong>.
+        </p>
+
+        <p>
+          You can always return to this page by clicking <strong>Intro</strong>.
+        </p>
+      </section>
+
+    </section>
+  </main>
+
+</body>
+</html>
