--- a/intro.html
+++ b/intro.html
@@ -156,7 +156,7 @@
   <main class="page">
 
     <header class="page-header">
-      <h1>Welcome to the ConGen2025 Assembly Workshop</h1>
+      <h1>Welcome to the ConGen2025 Assembly Workshop!</h1>
 
       <p>
         This page introduces the genome assembly module
@@ -200,14 +200,14 @@
             </p>
 
             <p>
-              Ellie has assembled genomes from many species across the tree of life including the
+              Ellie has assembled many reference genomes including the
               <a href="https://doi.org/10.1093/gigascience/giy124" target="_blank">African wild dog</a>,
               <a href="https://doi.org/10.1186/s12915-019-0734-5" target="_blank">lion</a>,
               <a href="https://doi.org/10.1093/gbe/evac125" target="_blank">brown bear</a>,
-              <a href="https://doi.org/10.1093/gbe/evab262" target="_blank">spiders</a>,
+              <a href="https://doi.org/10.1093/gbe/evab262" target="_blank">Hawaiian tetragnatha</a>,
               <a href="https://doi.org/10.1128/genomea.00281-18" target="_blank">lichens</a>,
-              <a href="https://doi.org/10.1093/gigascience/giz003" target="_blank">birds</a>,
-              <a href="https://doi.org/10.1093/g3journal/jkae034" target="_blank">foxes</a>
+              <a href="https://doi.org/10.1093/gigascience/giz003" target="_blank">birds of paradise</a>,
+              <a href="https://doi.org/10.1093/g3journal/jkae034" target="_blank">gray fox</a>
               and more.
             </p>
 
