--- a/intro.html
+++ b/intro.html
@@ -156,7 +156,7 @@
   <main class="page">
 
     <header class="page-header">
-      <h1>Welcome to the ConGen2025 Assembly Workshop!</h1>
+      <h1>Welcome to the ConGen2025 Genome Assembly Workshop!</h1>
 
       <p>
         This page introduces the genome assembly module
